<resources>
    <string name="app_name">CalculadoraApp</string>
    <string name="calculadora_title">Calculadora</string>
    <string name="num1_edit_text">Num1</string>
    <string name="num2_edit_text">Num2</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="division_button">/</string>
    <string name="multi_button">x</string>
    <string name="result_edit_text">Result</string>
</resources>